[tool.poetry]
name = "try_omegaconf"
version = "0.1.0"
description = ""
authors = ["Timofey Danshin <t.danshin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
